--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -51,21 +51,24 @@ div.token_info_bottom {
 @media only screen and (max-width: 600px){
   .polaroid {
     width: 90%;
-    margin: 6px 20px;
+    padding-left: 25px;
+    float: left;
   }
 
 }
 
 @media only screen and (min-width: 600px){
   .polaroid {
-    width: 90%;
+  	padding-left: 70px;
+    float: left;
+    width: 40%;
   }
 }
 
 
 @media only screen and (min-width: 992px){
 .polaroid {
-  padding: 0 15px;
+  padding-left: 30px;
   float: left;
   width: 30%;
 }
@@ -77,8 +80,9 @@ div.token_info_bottom {
 <body>
 
 
-<h1>Cozy Tokens Gallery</h1>
-<h2>Coffee Series</h2>
+
+	<h1>Cozy Tokens Gallery</h1>
+	<h2>Coffee Series</h2>
 <div class="polaroid">
 	<div class="token">
 		<div class="token_info_top">
